# EP005-CP--Individualized-Sepsis-Multi-Treatment-Effect-Prediction

./: .gitignore  README.md  index.html  main.jsx  package-lock.json  package.json  sepsis-dashboard.jsx
algorithm/sepsis_causal_project/: .gitignore  DATASET_REVIEW.md  README.md  TUNING_REPORT.md  pyproject.toml
algorithm/sepsis_causal_project/configs/: README.md
algorithm/sepsis_causal_project/configs/base/: default.yaml  smoke.yaml
algorithm/sepsis_causal_project/configs/final/: final_goal_balanced_cpu70.yaml  final_goal_balanced_cpu70_evalsafe.yaml  final_goal_balanced_cpu70_h12_eval.yaml  final_goal_balanced_for_training.yaml  final_goal_balanced_smoke2.yaml  final_optimized_cpu70.yaml  final_optimized_for_training.yaml  final_patient_horizon_balanced_smoke.yaml  final_patient_horizon_for_training_evalsafe.yaml  final_patient_horizon_sampler_smoke.yaml  final_patient_horizon_smoke.yaml  final_treatment_policy_cpu70.yaml  final_treatment_policy_cpu70_evalsafe.yaml  final_treatment_policy_for_training.yaml
algorithm/sepsis_causal_project/configs/optimization/: optimize_everything.yaml  optimize_goal_balanced.yaml  optimize_goal_balanced_smoke.yaml  optimize_goal_balanced_smoke2.yaml  optimize_patient_horizon.yaml  optimize_patient_horizon_aug_auprc.yaml  optimize_patient_horizon_sampler.yaml  optimize_patient_horizon_sampler_smoke.yaml  optimize_patient_horizon_smoke.yaml  optimize_resume_focused_round2.yaml  optimize_treatment_policy.yaml
algorithm/sepsis_causal_project/scripts/: check_dataset_status.py  download_physionet.py  download_required_datasets.ps1
(+40920 files in other folders)
